--- a/style.css
+++ b/style.css
@@ -187,7 +187,7 @@ section{
     display: none;
     position: fixed;
     width: 400px;
-    height: 200px;
+    height: 230px;
     background-color: white;
     top: 50%;
     margin-top: -100px;
@@ -212,6 +212,15 @@ section{
     background-color: rgba(255, 0, 0, 0.801);
     color: white;
 }
+input.nao_valido{
+    border-bottom: 1px solid red !important;
+    color: red;
+}
+span.nao_valido{
+    color: red;
+    display: none;
+}
+
 
 @media screen and (min-width: 481px) and (max-width: 1366px){
     nav{
