--- a/style.css
+++ b/style.css
@@ -258,11 +258,17 @@ input.nao_valido, textarea.nao_valido{
     }
     nav{
         float: none;
-        margin-left: 10px;
+        margin-left: -px;
         font-size: 16px;
     }
     nav .btn_destaque{
+        width: 100%;
+        padding: 5px 5px;
         margin-left: 0px;
+    }
+    .modal{
+        width: 346px;
+        
     }
     .sec01 p, .sec01 a{
         margin-left: 20px;
