--- a/style.css
+++ b/style.css
@@ -258,17 +258,24 @@ input.nao_valido, textarea.nao_valido{
     }
     nav{
         float: none;
-        margin-left: -2px;
+        margin-left: 0px;
         font-size: 16px;
     }
-    nav .btn_destaque{
+    .pos_modal{
         width: 100%;
-        padding: 5px 5px;
-        margin-left: 0px;
     }
     .modal{
-        width: 346px;
-        
+        width: 350px;
+        padding-left: 30px;
+    }
+    .pos_modal .modal .fechar{
+        background-color: rgba(255, 29, 29, 0.89) !important;
+        color: white;
+        padding: 3px 5px;
+        border-radius: 2px;
+    }
+    .pos_modal .modal .fechar:hover{
+        background-color: rgb(252, 0, 0) !important;
     }
     .sec01 p, .sec01 a{
         margin-left: 20px;
